# cse481wi19

./: .gitignore  README.md
applications/: package.xml
applications/scripts/: arm_demo.py  gripper_demo.py  head_demo.py  joint_reader_demo.py  keyboard_teleop.py  lights_demo.py  torso_demo.py
course_setup/: README.md  cse481c.bashrc  fetch.bash  install_cse481c.bash  kuri.bash  labmachine.bash
fetch_api/: package.xml
fetch_api/src/robot_api/: __init__.py  arm.py  base.py  head.py  lights.py  torso.py  vision.py
hcrl_kuri_launch/: CMakeLists.txt  README.md  package.xml
hcrl_kuri_launch/launch/: kuri.launch  may_nav.launch
joint_state_reader/: CMakeLists.txt  package.xml
joint_state_reader/src/joint_state_reader/: reader.py
kuri_camera/: CMakeLists.txt
kuri_camera/scripts/: ros_publisher.py
kuri_gazebo/: README.md
kuri_gazebo/launch/: kuri_gazebo.launch  kuri_spawn.launch
kuri_navigation/src/kuri_navigation/: may_nav_controller.py
robot_api/: CMakeLists.txt  package.xml  setup.py
robot_api/src/robot_api/: arm.py  gripper.py  head.py  lights.py
robot_api/src/robot_api/utils/: event.py
uw_cse/: CMakeLists.txt  package.xml
web_teleop/: CMakeLists.txt  package.xml
web_teleop/launch/: backend.launch
web_teleop/nodes/: actuators_node.py  joint_state_republisher.py
web_teleop/srv/: SetTorso.srv
